_redirects.txt file modified for netlify redirects

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="A movie / tv show / actors / users database."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/mtb.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>MtB</title>
   </head>
